# iram-30m-emir-obs-info

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: emir-bands.nblink  gallery-examples.rst  index.rst  infobs.graphics.rst  infobs.instruments.iram30m_emir.rst  infobs.instruments.rst  infobs.model.rst  infobs.rst  infobs.sampling.rst  infobs.util.rst  informativity.nblink  instruments.nblink  meudonpdr.nblink  modules.rst  requirements.txt  sampling.nblink  simulator.nblink
examples/: .gitignore  emir-bands.ipynb  informativity.ipynb  instruments.ipynb  meudonpdr.ipynb  sampling.ipynb  simulator.ipynb
examples/informativity/: inputs.yaml  regimes.yaml
examples/meudonpdr/: profiles.csv  slices.csv
infobs/: __init__.py  informativity.py  simulator.py
infobs/graphics/: __init__.py  _ism_lines_helpers.py  _util.py  infoplots.py  latex.py  pdrplots.py  plots.py  util.py
infobs/instruments/: __init__.py  instrument.py
infobs/instruments/iram30m_emir/: __init__.py  _display.py  emir_table_noise.csv  frequencies.npy  iram30m_emir.py  rms_profile.npz  rms_profile_ipwv_0mm.npy  rms_profile_ipwv_1mm.npy  rms_profile_ipwv_2mm.npy
infobs/model/: __init__.py  full_table.csv  meudon_pdr.py
infobs/model/meudon_pdr_emulator/: inputs_transformer.pkl  outputs_transformer.pkl
infobs/sampling/: __init__.py  mixtures.py  samplers.py
infobs/util/: __init__.py  util.py
tests/: test_informativity.py  test_simulator.py
tests/graphics/: test_infoplots.py  test_pdrplots.py
tests/instruments/: test_instrument.py  test_iram_30m_emir.py
tests/model/: test_meudon_pdr.py
tests/sampling/: samplers.py  test_mixtures.py  test_samplers.py
tests/util/: test_util.py
