[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infobs"
dynamic =["version"]
description = "provides tools to quantitatively estimate the usefulness of spectral line observations for estimating physical conditions."
authors = [
     {name = "Lucas Einig", email = "einig@iram.fr"}
]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "ipykernel>=6.29.3",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.1",
    "matplotlib>=3.8",
    "pre-commit>=3.6.2",
    "infovar>=0.1.0",
    "nnbma>=1.0.0",
    "flake8>=6.0.0",
    "black>=22.3.0",
    "isort>=5.12.0",
    "pydocstyle>=6.1.1",
    "pylint>=2.11.1",
    "coverage-badge>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.3",      # run the test suite
    "pytest-cov>=2.11.1", # generate coverage report see --cov --cov-report flags
]
docs = [
    "Sphinx>=5.3.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "rstcheck>=6.1.1",
    "esbonio>=0.15.0",
    "sphinx_rtd_theme>=1.2.0",
    "myst_parser>=1.0",
    "sphinx_design>=0.1.0",
    "sphinx_gallery>=0.0.10",
    "nbsphinx>=0.9.0",
    "nbsphinx_link>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv --cov=infobs --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["infobs"]



# For other tools to be black compliant
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[project.urls]
Repository = "https://github.com/einigl/iram-30m-emir-obs-info"
